Add the functions _Qp_cmp() and _Qp_cmpe() as described in the Sparc Compliance Definition.  On sparc64, GCC emits _Qp_cmp() calls for its __builtin_isfoo() functions which are used for C99's isfoo() macros.

Approved by:	re(dwhite)
PR:		73782